--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -43,6 +42,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^11.3.0",
     "genkit": "^1.0.4",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "openai": "^4.52.7",
